# airbyte

airbyte-integrations/connectors/source-treasury-prime/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-treasury-prime/source_treasury_prime/: __init__.py  manifest.yaml  run.py  source.py
airbyte-integrations/connectors/source-treasury-prime/source_treasury_prime/schemas/: TODO.md
